Add eslint job to CI

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,13 +1,30 @@
-name: Prettier Code Formatter
+name: Node.js CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '14'
+    - name: Install Dependencies
+      run: npm install
+    - name: Lint
+      run: npx eslint .
+
   prettier:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Run Prettier
-      run: |
-        npm install
-        npx prettier --write .
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '14'
+    - name: Install Dependencies
+      run: npm install
+    - name: Check Code Format
+      run: npx prettier --check .
