--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "open-browser": "xdg-open http://localhost:3000"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.15.13",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
