--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -25,6 +28,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.356.0",
     "next": "14.1.1",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
