--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "open-browser": "xdg-open http://localhost:3000"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@prisma/client": "^5.11.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -30,7 +32,9 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.356.0",
     "next": "14.1.1",
+    "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
@@ -47,6 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
