[#9] - Completely functional Auth, have to make a custom signin page

--- a/.env
+++ b/.env
@@ -18,5 +18,5 @@ EMAIL_FROM=noreply@example.com
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+DOMAIN_URL='http://localhost:5002'
 DATABASE_URL="postgres://default:CqLKY3X0NcJE@ep-floral-frog-a2tl7heu.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
