--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.356.0",
-    "next": "14.1.1",
+    "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
