--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "open-browser": "xdg-open http://localhost:3000",
+    "asd": "npm run open-browser-linux && next dev",
+    "open-browser-linux": "gnome-open http://localhost:3000",
     "postinstall": "prisma generate"
   },
   "dependencies": {
