--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "open-browser": "xdg-open http://localhost:3000",
+    "open-browser": "open http://localhost:3000",
     "postinstall": "prisma generate"
   },
   "dependencies": {
